Added The Man Who Was Thursday

--- a/books/2017.md
+++ b/books/2017.md
@@ -15,3 +15,5 @@ This is a list of books I have read in 2017. I will keep this list updated as I 
   - A fantastic read, as she always is.
 * [100 Aves Argentinas](http://www.cuspide.com/9789502410142/100+Aves+Argentinas/) by Canevari Pablo, Narosky Tito.
   - More of a reference book. Saw around 1/4th of the birds mentioned in this book.
+* [The Man Who Was Thursday](https://en.wikipedia.org/wiki/The_Man_Who_Was_Thursday) by G.K. Chesterton.
+  - This book gets better, each time I read it. I have a long history with this book, starting when I was around ten. It took me ten years to read it fully, and I regretted the lost time immensely. The ending is fantastic, and I've never looked at trees the same way since.
