Added some books

--- a/books/2017.md
+++ b/books/2017.md
@@ -17,3 +17,11 @@ This is a list of books I have read in 2017. I will keep this list updated as I 
   - More of a reference book. Saw around 1/4th of the birds mentioned in this book.
 * [The Man Who Was Thursday](https://en.wikipedia.org/wiki/The_Man_Who_Was_Thursday) by G.K. Chesterton.
   - This book gets better, each time I read it. I have a long history with this book, starting when I was around ten. It took me ten years to read it fully, and I regretted the lost time immensely. The ending is fantastic, and I've never looked at trees the same way since.
+* [King Bidgood's in the Bathtub](https://www.amazon.ca/King-Bidgoods-Bathtub-Audrey-Wood/dp/0152054359) by Audrey and Don Wood.
+* [Escape from the Antarctic](https://www.amazon.ca/Antarctic-Penguin-Journeys-Shackleton-2007-09-25/dp/B01K14NOHK/ref=sr_1_fkmr0_1?s=books&ie=UTF8&qid=1488472398&sr=1-1-fkmr0&keywords=shackleton+escape+from+arctic) by Ernest Shackleton.
+* [On Walking](https://en.wikipedia.org/wiki/Walking_(Thoreau)) by Henry David Thoreau.
+  - A fantastic little read. Full of brilliant quotes, and one of the few other places that I've found an explicit love of swamps.
+* [The Hitchhiker's Guide to the Galaxy](https://en.wikipedia.org/wiki/The_Hitchhiker%27s_Guide_to_the_Galaxy_(novel)) by Douglas Adams.
+  - Never fails to make me laugh.
+* [Hamish's Mountain Walk](https://www.goodreads.com/book/show/5554453-hamish-s-mountain-walk) by Hamish Brown.
+  - One of the best books I have read; daily, it filled me with memories of the Highlands and made me want to head back to Scotland. A beautiful, beautiful hike.
