Added Iterating Grace

--- a/books/2017.md
+++ b/books/2017.md
@@ -25,3 +25,5 @@ This is a list of books I have read in 2017. I will keep this list updated as I 
   - Never fails to make me laugh.
 * [Hamish's Mountain Walk](https://www.goodreads.com/book/show/5554453-hamish-s-mountain-walk) by Hamish Brown.
   - One of the best books I have read; daily, it filled me with memories of the Highlands and made me want to head back to Scotland. A beautiful, beautiful hike.
+* [Iterating Grace](https://www.wired.com/2015/12/iterating-grace-anonymous-satire/) by Koons Crooks.
+  - Ah, yes, the vicuna of satire rears once more.
