--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -175,3 +175,36 @@
   isbn = {978-2-9517408-7-7},
   language = {english}
  }
+
+@article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
+  author    = {Daniel S. Katz and
+               Sou{-}Cheng T. Choi and
+               Nancy Wilkins{-}Diehr and
+               Neil Chue Hong and
+               Colin C. Venters and
+               James Howison and
+               Frank J. Seinstra and
+               Matthew Jones and
+               Karen Cranston and
+               Thomas L. Clune and
+               Miguel de Val{-}Borro and
+               Richard Littauer},
+  title     = {Report on the Second Workshop on Sustainable Software for Science:
+               Practice and Experiences {(WSSSPE2)}},
+  journal   = {CoRR},
+  volume    = {abs/1507.01715},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1507.01715},
+  timestamp = {Sun, 02 Aug 2015 18:42:02 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{CCURL,
+	Author    = {Richard Littauer, Hugh Paterson III},
+	Title     = {Open Source Code Serving Endangered Languages},
+	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
+  Editor    = {C. Soria, L. Pretorius, T. Declerck, J. Mariani, K. Scannell, Eveline Wandl-Vogt},
+  Address   = {Portorož, Slovenia},
+	Year      = {2012}
+}
