Fixed year and accent and name

--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -109,7 +109,7 @@
 
 @article{LittIJDC,
 	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	Journal   = {International Journal of Data Curation},  
+	Journal   = {International Journal of Data Curation},
 	Title     = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
   Year      = {2012},
   Volume    = {7},
@@ -201,10 +201,10 @@
 }
 
 @inproceedings{CCURL,
-	Author    = {Richard Littauer, Hugh Paterson III},
+	Author    = {Littauer, Richard and Paterson III, Hugh},
 	Title     = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {C. Soria, L. Pretorius, T. Declerck, J. Mariani, K. Scannell, Eveline Wandl-Vogt},
-  Address   = {Portorož, Slovenia},
-	Year      = {2012}
+  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  Address   = {Portoro\v{z}, Slovenia},
+	Year      = {2016}
 }
