--- a/publications/bib/CCURL.bib
+++ b/publications/bib/CCURL.bib
@@ -1,8 +1,8 @@
 @inproceedings{CCURL,
-	Author    = {Richard Littauer, Hugh Paterson III},
+	Author    = {Littauer, Richard and Paterson, Hugh},
 	Title     = {Open Source Code Serving Endangered Languages},
 	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor    = {C. Soria, L. Pretorius, T. Declerck, J. Mariani, K. Scannell, Eveline Wandl-Vogt},
-  Address   = {Portorož, Slovenia},
-	Year      = {2012}
+  Editor    = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  Address   = {Portoro\v{z}, Slovenia},
+	Year      = {2016}
 }
