Editing and revamping the blog

--- a/_posts/2012-06-09-16-24-my-family-poem.md
+++ b/_posts/2012-06-09-16-24-my-family-poem.md
@@ -3,7 +3,7 @@ layout: post
 title: "My Family (poem)"
 description: "Poetry"
 category: poetry
-tags: []
+tags: [poetry]
 ---
 {% include JB/setup %}
 
