--- a/_posts/2012-06-17-21-10-pinched.md
+++ b/_posts/2012-06-17-21-10-pinched.md
@@ -3,7 +3,7 @@ layout: post
 title: "Pinched"
 description: "On the Metro in Paris"
 category: poetry
-tags: [poems, writing]
+tags: [poetry, writing]
 ---
 {% include JB/setup %}
 
