--- a/_posts/2012-06-17-22-13-seasons.md
+++ b/_posts/2012-06-17-22-13-seasons.md
@@ -3,7 +3,7 @@ layout: post
 title: "Seasons"
 description: "From my balcony"
 category: poetry
-tags: [poems, writings]
+tags: [poetry, writings]
 ---
 {% include JB/setup %}
 
