--- a/_posts/2012-07-03-21-53-sunset-poem.md
+++ b/_posts/2012-07-03-21-53-sunset-poem.md
@@ -3,7 +3,7 @@ layout: post
 title: "Sunset poem"
 description: "And the light is out, too"
 category: poetry
-tags: [poems]
+tags: [poetry]
 ---
 {% include JB/setup %}
 
