--- a/_posts/2013-07-13-17-29-lagbsc.md
+++ b/_posts/2013-07-13-17-29-lagbsc.md
@@ -3,7 +3,7 @@ layout: post
 title: "LAGBSC: Moving On"
 description: "On ending my role in the LAGBSC"
 category: academia
-tags: [uni, academia]
+tags: [university, academia]
 ---
 {% include JB/setup %}
 
