--- a/_posts/2015-12-29-books-i-read-in-2015.md
+++ b/_posts/2015-12-29-books-i-read-in-2015.md
@@ -3,7 +3,7 @@ layout: post
 title: "Books I read in 2015"
 description: "A reading list"
 category: journal
-tags: [list]
+tags: [list, books]
 date: 2015-12-29-23-15
 ---
 {% include JB/setup %}
