--- a/_posts/2017-02-08-books-i-read-in-2016.md
+++ b/_posts/2017-02-08-books-i-read-in-2016.md
@@ -3,7 +3,7 @@ layout: post
 title: "Books I read in 2016"
 description: "A reading list"
 category: journal
-tags: [list]
+tags: [list, books]
 date: 2017-02-08-17-50
 ---
 {% include JB/setup %}
