Broken link fixes

--- a/books/2017.md
+++ b/books/2017.md
@@ -6,7 +6,7 @@ description: "A list of books I read in 2017"
 ---
 {% include JB/setup %}
 
-This is a list of books I have read in 2017. I will keep this list updated as I finish more books, throughout the year. Here is my list of [books read in 2015](https://burntfen.com/2015-12-29/books-i-read-in-2015), and in [2016](2016.md).
+This is a list of books I have read in 2017. I will keep this list updated as I finish more books, throughout the year. Here is my list of [books read in 2015](https://burntfen.com/2015-12-29/books-i-read-in-2015), and in [2016](/2016).
 
 * [Sharpe's Rifles](https://en.wikipedia.org/wiki/Sharpe%27s_Rifles_(novel)) by Bernard Cornwell.
 * [Treasure Island](https://en.wikipedia.org/wiki/Treasure_Island) by Robert Louis Stevenson.
