--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -21,3 +21,5 @@ I don't use social media very much at the moment, or, in the least, not in any s
 I use various Slack, Discord, Element, and other chat programs, but I don't think it makes sense to share them here. 
 
 The best place to reach me is undoubtedly Signal or [email](mailto:richard@burntfen.com).
+
+You can reach this page easily at [richard.social](http://richard.social).
