Adding community science links

--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -19,6 +19,12 @@ I don't use social media very much at the moment, or, in the least, not in any s
 
 I use various Slack, Discord, Element, and other chat programs, but I don't think it makes sense to share them here. I no longer use Twitter for anything, and I would encourage you to leave, too.
 
+I also use various other platforms to record activities, often with others:
+
+- eBird: [Profile](https://ebird.org/profile/Mjg0MTUx/world) - for birds
+- iNaturalist: [Profile](https://www.inaturalist.org/people/richardlitt) - for life
+- Peakbagger: [Profile](https://peakbagger.com/climber/climber.aspx?cid=31159) - for mountains
+
 The best place to reach me is undoubtedly Signal or [email](mailto:richard@burntfen.com).
 
 You can reach this page easily at [richard.social](http://richard.social).
