--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -3,7 +3,7 @@ layout: post
 title: "Socials"
 description: "What social media I use"
 category: blog
-tags: []
+tags: [meta]
 date: 2023-05-30-12-21
 public: true
 ---
