--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -15,7 +15,7 @@ I don't use social media very much at the moment, or, in the least, not in any s
 - Mastodon: [mastodon.social/@richlitt](https://mastodon.social/@richlitt)
 - Facebook: [richard.littauer](https://www.facebook.com/richard.littauer)
 - LinkedIn: [Here](https://www.linkedin.com/in/richard-littauer-130026138/)
-- BlueSky: [@richlitt.bsky.social](https://staging.bsky.app/profile/richlitt.bsky.social)
+- BlueSky: [@richlitt.bsky.social](https://bsky.app/profile/richlitt.bsky.social)
 
 I use various Slack, Discord, Element, and other chat programs, but I don't think it makes sense to share them here. I no longer use Twitter for anything, and I would encourage you to leave, too.
 
