--- a/publications/bib/LittLDL.bib
+++ b/publications/bib/LittLDL.bib
@@ -7,5 +7,5 @@
   Publisher = {Association for Computational Linguistics},
   Address   = {Pisa, Italy},
 	Year      = {2013},
-  URL       = {http://www.aclweb.org/anthology/W13-5504},
+  URL       = {https://aclanthology.org/W13-5508/},
 }
