--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -9,13 +9,16 @@ public: true
 ---
 {% include JB/setup %}
 
+The best place to reach me is undoubtedly Signal or [<i class="fa fa-envelope"></i> email](mailto:richard@burntfen.com).
+
 I don't use social media very much at the moment, or, in the least, not in any structured, coordinated way. But, when I do, I use these accounts:
 
-- Instagram: [@richlittv3](https://www.instagram.com/richlittv3/)
 - Mastodon: [mastodon.social/@richlitt](https://mastodon.social/@richlitt)
-- Facebook: [richard.littauer](https://www.facebook.com/richard.littauer)
-- LinkedIn: [Here](https://www.linkedin.com/in/richard-littauer-130026138/)
+- Mastodon for Aotearoa New Zealand: [cloudisland.nz/@richardlitt](https://cloudisland.nz/@richardlitt)
 - BlueSky: [@richlitt.bsky.social](https://bsky.app/profile/richlitt.bsky.social)
+- LinkedIn: [Here](https://www.linkedin.com/in/richard-littauer-130026138/)
+- Instagram: [@richlittv3](https://www.instagram.com/richlittv3/)
+- Facebook: [richard.littauer](https://www.facebook.com/richard.littauer)
 
 I use various Slack, Discord, Element, and other chat programs, but I don't think it makes sense to share them here. I no longer use Twitter for anything, and I would encourage you to leave, too.
 
@@ -24,7 +27,6 @@ I also use various other platforms to record activities, often with others:
 - eBird: [Profile](https://ebird.org/profile/Mjg0MTUx/world) - for birds
 - iNaturalist: [Profile](https://www.inaturalist.org/people/richardlitt) - for life
 - Peakbagger: [Profile](https://peakbagger.com/climber/climber.aspx?cid=31159) - for mountains
-
-The best place to reach me is undoubtedly Signal or [email](mailto:richard@burntfen.com).
+- Strava
 
 You can reach this page easily at [richard.social](http://richard.social).
