Adding links to social page

--- a/_posts/2023-05-30-socials.md
+++ b/_posts/2023-05-30-socials.md
@@ -28,4 +28,24 @@ I also use various other platforms to record activities, often with others:
 - Peakbagger: [Profile](https://peakbagger.com/climber/climber.aspx?cid=31159) - for mountains
 - Strava
 
+Finally, I am a member of many different online groups, and would be happy to connect with others from them or about them:
+
+- [SustainOSS](https://sustainoss.org)
+- [CURIOSS](https://curioss.org)
+- [US-RSE](https://us-rse.org/)
+- [RSE-AUNZ](http://rse-aunz.org/)
+- [Entomological Society of NZ](https://ento.org.nz/)
+- [Wellington Botanical Society](https://wellingtonbotsoc.org.nz/)
+- [BirdsNZ](https://www.birdsnz.org.nz/)
+- [PythonNZ](https://python.nz/)
+- [NZ Ecological Society](https://newzealandecology.org/)
+- [VUW PGSA](https://www.vuwpgsa.ac.nz/)
+- Vermont Bird Alert group
+- Washington County (VT) Twitchers
+- [CHAOSS Community](https://chaoss.community/)
+- Open Source Policy Network
+- [rOpenSci](https://ropensci.org/)
+
+If I am missing something on this page, do let me know.
+
 You can reach this page easily at [richard.social](http://richard.social).
