--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -1,3 +1,64 @@
+# TODO  - make files for each of these
+
+@article{Littauer2025NotornisA,
+  Author    = {Richard Littauer},
+  Year      = {2025},
+  Volume    = {72},
+  Number    = {1},
+  Pages     = {49--50},
+  Journal   = {Notornis},
+  Title     = {A nomenclatural issue related to Lopdells’ penguin Archaeospheniscus lopdelli},
+  URL       = {https://doi.org/10.63172/777144pbjhsf},
+  DOI       = {10.63172/777144pbjhsf}
+}
+
+@article{Littauer2025NotornisB,
+  Author    = {Richard Littauer},
+  Year      = {2025},
+  Volume    = {72},
+  Number    = {1},
+  Pages     = {50--53},
+  Journal   = {Notornis},
+  Title     = {First revision of karoro Larus dominicanus antipodum (Bruch, 1853)},
+  URL       = {https://doi.org/10.63172/093633lrrwbq},
+  DOI       = {10.63172/093633lrrwbq}
+}
+
+@article{Littauer2025ZootaxaA,
+  Author    = {Richard Littauer},
+  Year      = {2025},
+  Volume    = {5569},
+  Number    = {2},
+  Pages     = {400-400},
+  Journal   = {Zootaxa},
+  Title     = {Corrections for grammatical agreement in Ophiodermatidae},
+  URL       = {https://doi.org/10.11646/zootaxa.5569.2.11},
+  DOI       = {10.11646/zootaxa.5569.2.11}
+}
+
+@InCollection{Littauer2025Botw,
+  Author    = {Richard Littauer},
+  Year      = {2025},
+  Title     = {Tristan Moorhen (Gallinula nesiotis), version 2.0},
+  Editor    = {Guy M. Kirwan, Nicholas D. Sly},
+  Booktitle = {Birds of the World},
+  Publisher = {Cornell Lab of Ornithology},
+  Address   = {Ithaca, NY},
+  URL       = {https://doi.org/10.2173/bow.trimoo2.02},
+  DOI       = {10.2173/bow.trimoo2.02}
+}
+
+@article{Littauer2025Weta,
+  Author    = {Richard Littauer},
+  Year      = {2025},
+  Volume    = {58},
+  Pages     = {55--57},
+  Journal   = {The Wētā},
+  Title     = {Audio observation of a Wellington Tree Wētā Hemideina crassidens defence stridulation},
+  URL       = {https://weta.ento.org.nz/index.php/weta/article/view/434},
+  Abstract  = {Wellington Tree Wētā Hemideina crassidens are known to produce a stridulating sound during defense (Field 1982). No papers that I could find have presented publicly available audio files which include this sound. Here, I describe one such call, and encourage others to upload their observations to community science websites.}
+}
+
 @incollection{ChiarcosLOD,
   Author    = {Christian Chiarcos and Steven Moran and Pablo N. Mendes and Sebastian Nordhoff and Richard Littauer},
   Year      = {to appear},
