Adding bib files

--- a/publications/bib/OKFLREC.bib
+++ b/publications/bib/OKFLREC.bib
@@ -1,4 +1,4 @@
-@InProceedings{CHIARCOS12.912,
+@InProceedings{OKFLREC,
   author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
   title = {The Open Linguistics Working Group},
   booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
