--- a/publications/bib/publications.bib
+++ b/publications/bib/publications.bib
@@ -1,6 +1,6 @@
 # TODO  - make files for each of these
 
-@article{Littauer2025NotornisA,
+@article{Littauer2025NotornisLopdell,
   Author    = {Richard Littauer},
   Year      = {2025},
   Volume    = {72},
@@ -12,7 +12,7 @@
   DOI       = {10.63172/777144pbjhsf}
 }
 
-@article{Littauer2025NotornisB,
+@article{Littauer2025NotornisKaroro,
   Author    = {Richard Littauer},
   Year      = {2025},
   Volume    = {72},
@@ -24,7 +24,7 @@
   DOI       = {10.63172/093633lrrwbq}
 }
 
-@article{Littauer2025ZootaxaA,
+@article{Littauer2025ZootaxaOphiodermatidae,
   Author    = {Richard Littauer},
   Year      = {2025},
   Volume    = {5569},
@@ -203,14 +203,13 @@
   URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=4553348},
 }
 
-@article{LittLinguist,
+@article{LittLinguist2013,
   Author    = {Richard Littauer},
   Title     = {Review of F. Seifart, G. Haig, N. Himmelmann, D. Jung, A. Margetts, & P. Trilsbeek, eds., Potentials of Language Documentation: Methods, Analyses, and Utilization. In: Language Documentation & Conservation Special Publication No. 3. Online: University of Hawai'i Press.},
   Journal = {LINGUIST List},
   Year      = {2013},
   Volume    = {24.2604},
   URL       = {http://linguistlist.org/pubs/reviews/get-review.cfm?SubID=12670360},}
-
 
 @InProceedings{LittULAB,
   author       = {Richard Littauer},
@@ -225,8 +224,7 @@
   abstract     = {I argue that there may have been pressures inhibiting phonological change in Tocharian, particularly in relation to the centum/satem Indo-European split. Firstly, if the overall complexity of language strata may change over time (Sampson, 2009), syntactic, morphological, and lexical changes may have inhibited a change in the phonemic inventory of the language. Secondly, I examine the historical evidence for other languages in historical Central Asia in order to show that contact languages may have also horizontally influenced the centum nature of Tocharian. Thirdly, I posit that the merge of the PIE dorsal consonants may have been influenced by the decline in the general use, domain and range of Tocharian, which would be in line with recent research correlating small phonemic inventories with small language communities (Hay \& Bauer, 2007). Tocharian therefore may not have been susceptible to a weak dialect wave, or to a possible early branching of IE. This paper takes a new perspective on the history and development of Tocharian, and in turn on the nature of the ‘textbook’ isogloss example.}
 }
 
-
-@InProceedings{CHIARCOS12.912,
+@InProceedings{OKFLREC,
   author = {Christian Chiarcos and Sebastian Hellmann and Sebastian Nordhoff and Steven Moran and Richard Littauer and Judith Eckle-Kohler and Iryna Gurevych and Silvana Hartmann and Michael Matuschek and Christian M. Meyer},
   title = {The Open Linguistics Working Group},
   booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
@@ -240,7 +238,7 @@
   language = {english}
  }
 
-@article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
+@article{wssspe2,
   author    = {Daniel S. Katz and
                Sou{-}Cheng T. Choi and
                Nancy Wilkins{-}Diehr and
